@@ -1,5 +1,4 @@
 {   "windowName": "Fluttercraft",
 	"serverUrl": "http://127.0.0.1:8080/",
-	"directoryName": "FluttercraftMC",
-	"onlineMode": true
+	"directoryName": "FluttercraftMC"
 }
